<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unisannio</string>
    <string name="pull">Tira</string>
    <string name="avvisi">Avvisi</string>
    <string name="ateneo">Ateneo</string>
    <string name="avvisi_ateneo">Avvisi Ateneo</string>
    <string name="tabtwo">Ingegneria</string>
    <string name="avvisi_ingengeria">Avvisi Ingegneria</string>
    <string name="tabthree">Giurisprudenza</string>
    <string name="avvisi_giurisprudenza">Avvisi Giurisprudenza</string>
    <string name="portals">Portali</string>
    <string name="name">Nome</string>
    <string name="lastname">Cognome</string>
    <string name="search">Cerca</string>
    <string name="searching">Ricerca in corso</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="title_activity_home">Unisannio</string>
    <string name="website">Sito WEB</string>
    <string name="loading">Caricamento…</string>
    <string name="mail_choice">Scegli un client email…</string>
    
    <!-- Facolta` -->
    <string name="faculties">Facolta`</string>
    <string name="ingegneria">Ingegneria</string>
    <string name="giurisprudenza">Giurisprudenza</string>
    <string name="sea">S.E.A.</string>
    <string name="scienze">Scienze MM.FF.NN.</string>

    <!-- Features -->
    <string name="cercapersone">Cerca persone</string>
    <string name="eventi">Eventi</string>
    <string name="mappa">Mappa</string>
    <string name="galleria">Galleria immagini</string>
    <string name="twitter">Twitter</string>
    <string name="contatti">Contatti</string>
    <string name="aule">Gestione aule</string>
    <string name="title_activity_ing_map">Mappa</string>
    <string name="satellite">Satellite ON/OFF</string>

</resources>